- Refactored the fixed background image to be iOS compatible - Collapsed header nav menu for mobile portrait - Finalized header text + relative background-image positioning - Added responsive breakpoint changes

--- a/assets/less/app-sm.less
+++ b/assets/less/app-sm.less
@@ -2,8 +2,9 @@
    Base
    ========================================================================== */
 
-html {
-	background-size: 1920px;
+#background-image {
+	background-size: 1440px !important;
+	background-position: center -400px;
 }
 
 
